# backend-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml
models/: faiss.py  grounding_dino.py  sam.py
models/embeddings/: clip.py  embedding_model.py  siglip.py
routers/: categories.py  image.py  index.py  recommendations.py  tryon.py
schemas/: errors.py
services/: categories.py  image.py  index.py  path.py  recommendations.py  segment.py  tryon.py
