[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pre-commit = "^3.7.0"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
opencv-contrib-python = "^4.9.0.80"
python-multipart = "^0.0.9"
faiss-gpu = "^1.7.2"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
protobuf = "^5.26.1"
sentencepiece = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
